# mongo-cxx-driver

./: .bazelrc  .clang-format  .clang-tidy  .codecov.yml  .git-blame-ignore-refs  .gitattributes  .gitignore  .mci.yml  .travis.sh  .travis.yml  .ycm_extra_conf.py  404.html  404.md  AGENTS.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  CREDITS.json  Doxyfile  README  README.md  SConscript.buildinfo  SConstruct  THIRD-PARTY-NOTICES  TODO.md  VERSIONING.md  WORKSPACE  aggregate_8hpp_source.html  annotated.html  appveyor.yml  array_2element_8hpp_source.html  array_2value_8hpp_source.html  array_2view_8hpp_source.html  array_2view__or__value_8hpp_source.html  array__context_8hpp_source.html  authentication_8hpp_source.html  authentication__exception_8hpp_source.html  (+476 more)
benchmark/: CMakeLists.txt  README.md  README.txt  benchmark_runner.cpp  benchmark_runner.hpp  bson_encoding.hpp  composite_score.hpp  find_one_by_id.hpp  main.cpp  microbench.cpp  microbench.hpp  run_benchmarks.cpp  score_recorder.cpp  score_recorder.hpp
benchmark/bson/: bson_decoding.hpp  bson_encoding.hpp
benchmark/multi_doc/: bulk_insert.hpp  find_many.hpp  gridfs_download.hpp  gridfs_upload.hpp
benchmark/parallel/: gridfs_multi_export.hpp  gridfs_multi_import.hpp  json_multi_export.hpp  json_multi_import.hpp
benchmark/single_doc/: find_one_by_id.hpp  insert_one.hpp  run_command.hpp
docs/: .gitignore  CMakeLists.txt  DoxygenLayout.xml  config.toml  doxygen-header.html
docs/content/: _index.md  getting-help.md  index.md  reporting-bugs.md
docs/content/contributing/: _index.md  index.md  legacy-release-guide.md  mongocxx-release-guide.md  testing-legacy.md  testing-mongocxx.md
docs/content/legacy-v1/: _index.md  breaking-changes.md  configuration.md  index.md  installation.md  tutorial.md  working-with-bson.md
docs/content/mongocxx-v3/: _index.md  api-abi-versioning.md  client-side-encryption.md  configuration.md  connection-pools.md  index.md  installation.md  thread-safety.md  tutorial.md  working-with-bson.md
docs/data/: mongodb.toml
docs/layouts/shortcodes/: api1ref.html  apiref.html
docs/themes/: CMakeLists.txt
docs/themes/mongodb/: CMakeLists.txt  theme.toml
examples/: CMakeLists.txt  README.md  aggregate.cpp  bulk_write.cpp  create.cpp  find_or_query_data.cpp  index.cpp  insert.cpp  macros.hh  query.cpp  remove.cpp  update.cpp
examples/add_subdirectory/: .gitignore  CMakeLists.txt  hello_mongocxx.cpp
examples/api/: concern.cpp  concern.hh  db_lock.cpp  db_lock.hh  runner.cpp  runner.hh
examples/bsoncxx/: BUILD.bazel  CMakeLists.txt  bson_binary_vector.cpp  builder_basic.cpp  builder_core.cpp  builder_list.cpp  builder_stream.cpp  builder_stream_customization.cpp  builder_stream_fancy.cpp  decimal128.cpp  getting_values.cpp  view_and_value.cpp
examples/cmake/FindPkgConfig/: CMakeLists.txt
examples/cmake/find_package/: CMakeLists.txt  hello_mongocxx.cpp
examples/mongocxx/: BUILD.bazel  CMakeLists.txt  aggregate.cpp  automatic_client_side_field_level_encryption.cpp  bulk_write.cpp  causal_consistency.cpp  change_streams.cpp  client_session.cpp  connect.cpp  create.cpp  document_validation.cpp  example_assert.hh  exception.cpp  explicit_encryption.cpp  explicit_encryption_auto_decryption.cpp  get_values_from_documents.cpp  gridfs.cpp  index.cpp  inserted_id.cpp  instance_management.cpp  pool.cpp  query.cpp  query_projection.cpp  remove.cpp  server_side_field_level_encryption_enforcement.cpp  tailable_cursor.cpp  tutorial.cpp  update.cpp  usage_overview.cpp  view_or_value_variant.cpp  with_transaction.cpp
examples/mongocxx/mongodb.com/: aggregation_examples.cpp  change_streams_examples.cpp  documentation_examples.cpp  index_examples.cpp  runcommand_examples.cpp  transactions_examples.cpp  usage_overview.cpp  versioned_api_examples.cpp
examples/projects/: CMakeLists.txt
examples/projects/bsoncxx/: hello_bsoncxx.cpp
examples/projects/mongocxx/: hello_mongocxx.cpp
generate_uninstall/: CMakeLists.txt
src/: CMakeLists.txt  SConscript  SConscript.client  mongocxx.hpp
src/bson/: builder.hpp  libbson.cpp  libbson.hpp  oid.cpp  string_or_literal.cpp  string_or_literal.hpp  types.cpp
src/bson/builder/: array_ctx.hpp  closed_ctx.hpp  concrete.cpp  concrete.hpp  document.hpp  helpers.cpp  helpers.hpp  impl.hpp  macros_off.hpp  macros_on.hpp  single_ctx.hpp
src/bson/document/: element.cpp  element.hpp  value.cpp  value.hpp  view.cpp  view.hpp  view_or_value.cpp  view_or_value.hpp
src/bson/enums/: binary_sub_type.hpp
src/bson/util/: b64_ntop.h  functor.hpp  itoa.cpp  itoa.hpp  stack.hpp
src/bsoncxx/: BUILD.bazel  CMakeLists.txt  b64_ntop.h  bsoncxx.rc  bsoncxx.rc.in  builder.hpp  decimal128.cpp  decimal128.hpp  json.cpp  json.hpp  libbsoncxx.pc.in  oid.cpp  oid.hpp  string_or_literal.cpp  string_or_literal.hpp  types.cpp  types.hpp  validate.cpp  validate.hpp  view_or_value.hpp
src/bsoncxx/array/: element.cpp  element.hpp  value.cpp  value.hpp  view.cpp  view.hpp  view_or_value.hpp
src/bsoncxx/builder/: CMakeLists.txt  array.hpp  array_ctx.hpp  (+15 more)
src/driver/: CMakeLists.txt
src/mongo/: .clang-format  SConscript  clienttest_main.cpp  config.h.in  integration_main.cpp  pch.h  version.h.in
src/mongocxx/: BUILD.bazel  CMakeLists.txt  bulk_write.cpp  bulk_write.hpp  change_stream.cpp  change_stream.hpp  client.cpp  client.hpp  client_encryption.cpp  client_encryption.hpp  client_session.cpp  client_session.hpp  collection.cpp  collection.hpp  cursor.cpp  cursor.hpp  database.cpp  database.hpp  hint.cpp  hint.hpp  index_model.cpp  index_model.hpp  index_names.cpp  index_names.hpp  index_view.cpp  index_view.hpp  insert_many_builder.cpp  insert_many_builder.hpp  instance.cpp  instance.hpp  libmongocxx.pc.in  logger.cpp  logger.hpp  mongocxx.rc  mongocxx.rc.in  pipeline.cpp  pipeline.hpp  pool.cpp  pool.hpp  read_concern.cpp  (+18 more)
src/stdx/: optional.cpp  optional.hpp
test/: CMakeLists.txt
test/bson/: bson_builder.cpp  bson_string_or_literal.cpp  bson_util_itoa.cpp  new_tests.cpp  test_1.cpp  test_3.cpp  test_4.cpp  test_5.cpp
(+59958 files in other folders)
